k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jiohotstar
  labels:
    name: jiohotstar
